--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+<header class="app-header">
+  <h1>THIS IS A HEADER</h1>
+</header>
   <body>
     <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
