fixed block in admin books

--- a/app/views/admin/books/new.html.erb
+++ b/app/views/admin/books/new.html.erb
@@ -5,3 +5,4 @@ before_action :authenticate_user!
   <h3>Title:<%= f.text_field :title %></h3>
   <p>Body:<%= f.text_are :body %></p>
   <h3>Author: <%= f.text_field :author %></h3>
+ end
