fixed books controller

--- a/app/views/admin/books/new.html.erb
+++ b/app/views/admin/books/new.html.erb
@@ -5,4 +5,5 @@
   <h3>Title:<%= f.text_field :title %></h3>
   <p>Body:<%= f.text_area :body %></p>
   <h3>Author: <%= f.text_field :author %></h3>
+  <%= f.submit %>
 <% end %>
