fixed routes/added devise views

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,10 @@
 <div class="c-section">
-  <h1 class="c-title c-title--large"><%= @book.title %></h1>
-  <h4 class="c-title"><%= @book.authors.pluck(:name).join(", ") %></h4>
+  <h2 class="c-title c-title--large title"><%= @book.title %></h2>
+  <h4 class="c-title"><%= @book.author %></h4>
   <h4 class="c-title c-title--tiny"><%= @book.price %></h4>
 </div>
-<%= link_to "Buy this book!" new_book_sale_path,(@book) class: "c-button--focal" %>
+<%= link_to "Buy this book!", new_book_sale_path(@book), class: "c-button--focal" %>
+
 <div class="c-section">
   <h3 class="c-title c-title--small">About this book</h3>
   <p class="c-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
