--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,4 +1,9 @@
-<header class="header-nav">
-  <a href="#">Books</a>
-  <a href="#">Authors</a>
-</header>
+<div class="home-page-container">
+  <div class="button-container">
+    <a class="c-button c-button--focal" href="<%= new_user_session_path  %>">Create An Account</a>
+  </div>
+  <div class="button-container">
+    <a class="c-button c-button--focal" href="<%= books_path  %>">Find Your Book</a>
+    </a>
+  </div>
+</div>
