--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1,5 +1,60 @@
 html {
   font-size: $ff-base-size;
+  margin: 0;
+}
+
+.header-container {
+  background-color: #685ccc;
+  height: 100px;
+  margin: 0;
+  text-align: center;
+}
+
+h2.title {
+  color: black;
+}
+
+h1.c-title.c-title--large {
+  margin: 0;
+  color: #f6f9fb;
+  padding-top: 20px;
+}
+
+.home-page-container {
+  margin: 0 auto;
+  width: 100%;
+  height: 550px;
+  background-image: url(bookstore.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.button-container {
+  margin: 0 25px;
+  display: inline-block;
+  padding-top: 75px;
+}
+
+.footer-container {
+  height: 70px;
+  background-color: #685ccc;
+  // margin-top: 200px;
+}
+
+.home {
+  color: #ded6ff;
+}
+
+.footer-container.c-navigation__item {
+  color: #ded6ff;
+}
+
+.footer-container ul {
+  margin: 0;
+}
+
+.notice, .alert {
+  margin: 0;
 }
 
 body {
@@ -10,6 +65,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   -webkit-font-smoothing: antialiased;
+  margin: 0;
 }
 
 img {
